; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_gx_gfx.c_retrace_callback.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_gx_gfx.c_retrace_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_draw_done = common dso_local global i32 0, align 4
@g_video_cond = common dso_local global i32 0, align 4
@retraceCount = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @retrace_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @retrace_callback(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* %2, align 4
  store i32 1, i32* @g_draw_done, align 4
  %5 = load i32, i32* @g_video_cond, align 4
  %6 = call i32 @OSSignalCond(i32 %5)
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @_CPU_ISR_Disable(i32 %7)
  %9 = load i32, i32* %2, align 4
  store i32 %9, i32* @retraceCount, align 4
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @_CPU_ISR_Restore(i32 %10)
  ret void
}

declare dso_local i32 @OSSignalCond(i32) #1

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
